--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,115 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
+
+@layer base {
+
+    *,
+    html {
+        font-family: "Poppins", sans-serif;
+    }
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+
+/*----------------------
+       Universal Styles 
+  ------------------------*/
+
+* {
+    box-sizing: border-box;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+    padding: 0;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+
+.plus-jakarta-sans {
+    font-family: "Plus Jakarta Sans", sans-serif;
+}
+
+.custom-hover:hover {
+    box-shadow: 13.49px 16.87px 67.47px 8.43px #0A0A0A,
+        -8.43px -16.87px 50.6px -16.87px #485B71;
+}
+
+.custom-hover-effect {
+    box-shadow: 13.49px 16.87px 67.47px 8.43px #0A0A0A,
+        -8.43px -16.87px 50.6px -16.87px #485B71;
+}
+
+.gallery-inner-shadow {
+    box-shadow: inset 0px 4px 10px 2px #00000040;
+}
+
+.add-image-shadow {
+    box-shadow:
+        inset 0px 3.26px 3.26px 0px rgba(255, 255, 255, 0.15),
+        inset 0px 0px 48.91px 0px rgba(255, 255, 255, 0.05),
+
+        /* Drop Shadows */
+        9px 10px 7.1px 0px rgba(0, 0, 0, 0.4),
+        -0.5px -0.5px 6.9px 0px rgba(255, 255, 255, 0.25);
+}
+
+.arrow-shadow {
+    box-shadow: -5px -3px 30px -10px #96BEE7, 4px 5px 30px 5px #101213;
+}
+
+.arrow-background {
+    background: linear-gradient(139.14deg, #303439 12.4%, #161718 94.96%);
+}
+
+.scroll-container {
+    position: relative;
+    height: 100%;
+    /* Adjust to your needs */
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.scroll-content {
+    padding-right: 20px;
+    /* Space for custom scrollbar */
+}
+
+.scroll-container::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 8px;
+    height: 64px;
+    background: linear-gradient(177.32deg, #888989 5.6%, #4A4E54 93.28%);
+    border-radius: 8px;
+    box-shadow: 4px 4px 4.9px rgba(0, 0, 0, 0.25);
+    z-index: 10;
+    pointer-events: none;
+}
+
+.scroll-container::-webkit-scrollbar {
+    width: 8px;
+}
+
+.scroll-container::-webkit-scrollbar-thumb {
+    background: transparent;
+    /* Hide default thumb */
+}
+
+.divider {
+    background:
+        linear-gradient(180deg, rgba(40, 40, 40, 0.1) 0%, rgba(248, 248, 248, 0.1) 100%),
+        linear-gradient(0deg, rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.05));
+
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.33);
 }
